--- a/bobviewfront/public/index.html
+++ b/bobviewfront/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>bobview</title>
+    <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js" type="text/javascript"></script>
   </head>
   <body>
+    
     <noscript>
       <strong>We're sorry but bobview doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
